@@ -1,3 +1,8 @@
+2015-04-27  Jeff Law <law@redhat.com>
+
+        PR tree-optimization/65217
+	* gcc.target/i386/pr65217.c: Remove XFAIL.
+
 2015-04-27  Andre Vehreschild  <vehre@gmx.de>
 
 	PR fortran/60322
